--- a/app/src/main/res/layout/guillotine.xml
+++ b/app/src/main/res/layout/guillotine.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/guillotine_background"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -16,52 +16,40 @@
             android:src="@drawable/ic_menu" />
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
-        android:id="@+id/profile_group"
-        style="@style/LinearLayout.GuillotineItem"
-        android:layout_marginTop="@dimen/guillotine_medium_margin">
-
-        <ImageView
-            style="@style/ImageView.GuillotineItem"/>
-
-        <com.drummerjun.clarechen.ui.widget.CanaroTextView
-            style="@style/TextView.GuillotineItem.Selected"
-            android:text="For Love" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/feed_group"
+    <LinearLayout android:id="@+id/group_girls"
         style="@style/LinearLayout.GuillotineItem">
-
         <ImageView
             style="@style/ImageView.GuillotineItem"/>
-
         <com.drummerjun.clarechen.ui.widget.CanaroTextView
-            style="@style/TextView.GuillotineItem.GirlSelected"
+            style="@style/TextView.GuillotineItem"
             android:text="For Her" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/activity_group"
+    <LinearLayout android:id="@+id/group_boys"
         style="@style/LinearLayout.GuillotineItem">
         <ImageView
             style="@style/ImageView.GuillotineItem"/>
         <com.drummerjun.clarechen.ui.widget.CanaroTextView
-            style="@style/TextView.GuillotineItem.BoySelected"
+            style="@style/TextView.GuillotineItem"
             android:text="For Him" />
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/guillotine_divider_height" />
-
-    <LinearLayout
-        android:id="@+id/settings_group"
+    <LinearLayout android:id="@+id/group_all"
         style="@style/LinearLayout.GuillotineItem">
-
         <ImageView
             style="@style/ImageView.GuillotineItem"/>
+        <com.drummerjun.clarechen.ui.widget.CanaroTextView
+            style="@style/TextView.GuillotineItem"
+            android:text="For Love" />
+    </LinearLayout>
 
+    <View android:layout_width="match_parent"
+        android:layout_height="@dimen/guillotine_divider_height" />
+
+    <LinearLayout android:id="@+id/settings_group"
+        style="@style/LinearLayout.GuillotineItem">
+        <ImageView
+            style="@style/ImageView.GuillotineItem"/>
         <com.drummerjun.clarechen.ui.widget.CanaroTextView
             style="@style/TextView.GuillotineItem"
             android:text="Settings" />
