--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,6 @@
     <dimen name="padding_normal">16dp</dimen>
     <dimen name="fab_size">56dp</dimen>
     <dimen name="touch_raise">6dp</dimen>
+    <dimen name="z_app_bar">4dp</dimen>
     <dimen name="shot_collapsed_app_bar_height">168dp</dimen>
 </resources>
