--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,7 +44,16 @@
     <style name="TextView.GuillotineItem.Selected">
         <item name="android:textColor">@color/colorPrimary</item>
     </style>
-
+    <style name="TextAppearance.DribbbleShotTitle" parent="@android:style/TextAppearance.Material.Headline">
+        <item name="android:fontFamily">@font/roboto_mono</item>
+        <item name="android:textColor">@color/text_primary_dark</item>
+        <item name="lineHeightHint">32sp</item>
+    </style>
+    <style name="TextAppearance.DribbbleShotDescription" parent="@android:style/TextAppearance.Material.Subhead">
+        <item name="android:textColor">@color/text_tertiary_dark</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="lineHeightHint">24sp</item>
+    </style>
     <style name="ImageView" />
     <style name="ImageView.ContentItem">
         <item name="android:layout_height">wrap_content</item>
