--- a/app/src/main/res/layout/activity_layer1.xml
+++ b/app/src/main/res/layout/activity_layer1.xml
@@ -18,16 +18,21 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:contentScrim="@color/colorPrimary"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp">
+            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
+            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
+            app:expandedTitleGravity="end|bottom"
+            app:expandedTitleMarginBottom="@dimen/padding_normal"
+            app:expandedTitleMarginStart="@dimen/padding_normal">
+            <!--app:contentScrim="@android:color/black"-->
+            <!--app:expandedTitleMarginStart="48dp"-->
+            <!--app:expandedTitleMarginEnd="64dp"-->
             <com.drummerjun.clarechen.ui.widget.SquareImageView
                 android:id="@+id/sqimage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"/>
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:fitsSystemWindows="false"
+                app:layout_collapseMode="parallax" />
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar1"
                 android:layout_width="match_parent"
@@ -51,7 +56,6 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
                 app:cardElevation="8dp"
                 app:cardUseCompatPadding="true">
                 <LinearLayout
@@ -78,6 +82,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab1"
+        android:visibility="invisible"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|right|end"
         style="@style/FabStyle" />
