--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -27,15 +27,14 @@
             <TextView android:id="@+id/product_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:text=""
+                android:layout_weight="1"
                 android:textColor="@android:color/white"
-                android:maxLines="2"/>
+                android:maxLines="1"/>
             <TextView android:id="@+id/product_price"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text=""
+                android:maxLines="1"
                 android:gravity="bottom|end"
                 android:textSize="16sp"
                 android:textColor="@android:color/white"/>
