Design Library improvement & Yalantis Context Menu Library

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,7 +23,7 @@
         <item name="rippleColor">@android:color/white</item>
     </style>
 
-    <style name="Toolbar">
+    <style name="Toolbar" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:minHeight">?attr/actionBarSize</item>
