--- a/app/src/main/res/layout/activity_layer1.xml
+++ b/app/src/main/res/layout/activity_layer1.xml
@@ -33,10 +33,25 @@
                 android:scaleType="fitXY"
                 android:fitsSystemWindows="false"
                 app:layout_collapseMode="parallax" />
+            <!--<ImageView android:id="@+id/sqimage"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:fitsSystemWindows="true"-->
+                <!--android:scaleType="fitCenter"-->
+                <!--app:layout_collapseMode="parallax"/>-->
+            <View android:background="@drawable/scrim_180"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:layout_gravity="top" />
+            <View android:background="@drawable/scrim"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:layout_gravity="bottom" />
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar1"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                 app:layout_collapseMode="pin">
             </android.support.v7.widget.Toolbar>
@@ -75,7 +90,6 @@
                         android:layout_margin="16dp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                 </LinearLayout>
-
             </android.support.v7.widget.CardView>
         </FrameLayout>
     </android.support.v4.widget.NestedScrollView>
