--- a/app/src/main/res/drawable/circular.xml
+++ b/app/src/main/res/drawable/circular.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@android:color/transparent" />
-    <stroke android:color="@android:color/white" android:width="2dp"/>
+    <stroke android:color="@color/active_color" android:width="2dp"/>
     <size
         android:height="50dp"
         android:width="50dp" />
