--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#84cacf</color>
-    <color name="colorPrimaryDark">#636363</color>
+    <color name="colorPrimaryDark">#4484cacf</color>
     <color name="colorAccent">#fc929d</color>
 
     <color name="guillotine_background">#444153</color>
     <color name="guillotine_background_dark">#383547</color>
     <color name="color_boy">#30d1d5</color>
     <color name="color_girl">#ff5465</color>
+    <color name="color_all">#c0ca33</color>
 
     <color name="background_light">#fafafa</color>
     <color name="scrim">#99323232</color>
