--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.drummerjun.clarechen.ui.MainActivity"
-    android:id="@+id/root">
+    android:id="@+id/root"
+    android:animateLayoutChanges="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             app:contentInsetStart="0dp"
             style="@style/Toolbar">
-            <ImageView
-                android:id="@+id/content_hamburger"
+            <ImageView android:id="@+id/content_hamburger"
                 style="@style/ImageView.Hamburger"
                 android:src="@drawable/ic_menu_90" />
             <com.drummerjun.clarechen.ui.widget.CCTextView
@@ -34,12 +33,45 @@
             android:id="@+id/pull_to_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+            <RelativeLayout android:id="@+id/banner_container"
+                android:visibility="visible"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:background="@drawable/scrim_dark">
+                <com.jude.rollviewpager.RollPagerView android:id="@+id/main_banner"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:rollviewpager_play_delay="3000"/>
+                <TextView android:id="@+id/banner_title"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="top|start"
+                    android:paddingStart="@dimen/padding_normal"
+                    android:paddingTop="@dimen/padding_normal"
+                    android:background="@drawable/scrim_180"/>
+                <TextView android:id="@+id/banner_sub"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
+                    android:textAlignment="viewEnd"
+                    android:maxLines="2"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:paddingEnd="@dimen/padding_normal"
+                    android:paddingBottom="@dimen/padding_normal"/>
+            </RelativeLayout>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/productlistview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="vertical"/>
+            </LinearLayout>
         </com.yalantis.phoenix.PullToRefreshView>
-
     </LinearLayout>
 </FrameLayout>
