--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,6 +67,8 @@
     <style name="ImageView.Hamburger" parent="Widget.AppCompat.ActionButton">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
+        <!--<item name="android:layout_alignParentStart">true</item>-->
+        <!--<item name="android:layout_alignParentTop">true</item>-->
         <item name="android:layout_marginBottom">@dimen/abc_action_bar_overflow_padding_start_material</item>
     </style>
     <style name="ImageView.GuillotineItem">
