--- a/app/src/main/res/layout/guillotine.xml
+++ b/app/src/main/res/layout/guillotine.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:focusable="true"
+    android:clickable="true">
 
     <android.support.v7.widget.Toolbar
         style="@style/Toolbar"
