--- a/app/src/main/res/color/active_all.xml
+++ b/app/src/main/res/color/active_all.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_activated="true" android:color="@color/color_all"/>
+    <item android:state_activated="true" android:color="@color/color_all_dark"/>
     <item android:state_pressed="true" android:color="@color/colorAccent"/>
     <item android:color="@android:color/white"/>
 </selector>
