--- a/app/src/main/res/layout/activity_layer1.xml
+++ b/app/src/main/res/layout/activity_layer1.xml
@@ -18,10 +18,9 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
+            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
             app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
             app:statusBarScrim="@android:color/transparent"
-            app:expandedTitleGravity="end|bottom"
             app:expandedTitleMarginBottom="@dimen/padding_normal"
             app:expandedTitleMarginStart="@dimen/padding_normal">
             <!--app:contentScrim="@android:color/black"-->
@@ -66,13 +65,14 @@
         android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <FrameLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardElevation="4dp"
+                app:cardElevation="2dp"
                 app:cardUseCompatPadding="true">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -92,7 +92,11 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
-        </FrameLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/contentlistview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
